--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .radix-themes {
   --default-font-family: "Manrope", sans-serif; /* Your custom default font */
   --heading-font-family: "Merriweather", serif; /* Your custom font for <Heading> components */
